# neiht

./: .clang-format  .editorconfig  CMakeLists.txt  Makefile  README
.cache/clangd/index/: main.cc.AAA3F939FBE38DED.idx  openfiledialog.cc.05226BCE21EFFA49.idx  program.hpp.42C4E5C45F8AFCE8.idx
source/: main.cc
source/program/: draw.cc  getTabsFromFiles.cc  id.cc  keysHandling.cc  openfiledialog.cc  program.cc  program.hpp  reloadFont.cc  setTabs.cc  setTabsFromFiles.cc  tab.hpp  update.cc
source/program/program/: draw.cc
source/program/tab/: tab.hpp
source/tab/: contentWidth.cc  draw.cc  getLines.cc  state.cc  tab.hpp  update.cc
